--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@ffmpeg/core": "^0.10.0",
+    "@ffmpeg/ffmpeg": "^0.10.1",
+    "@types/ffmpeg": "^1.0.4",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
